// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page renders page with breadcrumb 1`] = `
<div>
  <div
    className="Page"
  >
    <div>
      <Breadcrumb
        className="Breadcrumb"
        content="Step 1"
      />
    </div>
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        Page Title
      </h1>
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders page with breadcrumb 2`] = `
<UnstyledLink
  className="Breadcrumb"
>
  <ChevronLeft
    size={27}
  />
  Step 1
</UnstyledLink>
`;

exports[`Page renders page with children 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        Page Title
      </h1>
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders page with empty state 1`] = `
<EmptyState
  primaryAction={
    Object {
      "content": "Primary",
    }
  }
  title="Page Title"
>
  Empty page
</EmptyState>
`;

exports[`Page renders page with secondary actions 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        Page Title
      </h1>
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    >
      <UnstyledLink
        className="SecondaryAction"
        key="0"
      >
        secondary 1
      </UnstyledLink>
      <UnstyledLink
        className="SecondaryAction"
        key="1"
      >
        secondary 2
      </UnstyledLink>
    </div>
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders primary area node 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        Page Title
      </h1>
      <div
        className="PrimaryAction"
      >
        <div>
          primary
        </div>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders subtitle node 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        Page Title
      </h1>
      <div
        className="SubtitleNode"
      >
        <div>
          sub
        </div>
      </div>
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders subtitle string 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        Page Title
      </h1>
      <h2
        className="Subtitle"
      >
        sub
      </h2>
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders title as a node 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <h1
        className="Title"
      >
        <div>
          test
        </div>
      </h1>
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;

exports[`Page renders w/o title 1`] = `
<div>
  <div
    className="Page"
  >
    <div
      className="MainContent"
    >
      <div
        className="PrimaryAction"
      >
        <Button
          color="orange"
          size="large"
        >
          Primary
        </Button>
      </div>
    </div>
    <div
      className="SecondaryActions"
    />
  </div>
  <h1>
    Test Example
  </h1>
</div>
`;
